Country is now obligatory in authors' addresses

--- a/README
+++ b/README
@@ -278,3 +278,6 @@ Version 1.73   Bug fixes
 
 Version 1.74   Bug fixes.  A regression introduced in the font changes
 	       is reverted.
+
+Version 1.75.  \country is now obligatory for addresses.
+
