--- a/README
+++ b/README
@@ -283,3 +283,5 @@ Version 1.75.  \country is now obligatory for addresses.
 	       Added \AtBeginMaketitle
 
 Version 1.76.  Added many journal abbreviations to the bst.
+	       Bug fixes
+	       
