--- a/README
+++ b/README
@@ -284,4 +284,5 @@ Version 1.75.  \country is now obligatory for addresses.
 
 Version 1.76.  Added many journal abbreviations to the bst.
 	       Bug fixes
-	       
+
+Version 1.77.  Bug fixes
