New experimental option pbalance

--- a/README
+++ b/README
@@ -286,3 +286,4 @@ Version 1.76.  Added many journal abbreviations to the bst.
 	       Bug fixes
 
 Version 1.77.  Bug fixes
+	       New experimental option: pbalance
