ORCID linking code

--- a/README
+++ b/README
@@ -287,3 +287,4 @@ Version 1.76.  Added many journal abbreviations to the bst.
 
 Version 1.77.  Bug fixes
 	       New experimental option: pbalance
+	       ORCID linking code
