--- a/acmart.dtx
+++ b/acmart.dtx
@@ -140,6 +140,7 @@
 %  David Shamma,
 %  Gabriel Scherer,
 %  Kartik Singhal,
+%  Christoph Sommer,
 %  Stephen Spencer,
 %  Shin Hwei Tan,
 %  Daniel Thomas,
@@ -1906,7 +1907,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2021/02/21 v1.76 Typesetting articles for the Association for Computing Machinery]
+[2021/04/16 v1.77 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -6195,6 +6196,7 @@
 % \begin{macro}{\@mkauthorsaddresses}
 % \changes{v1.46}{2017/08/27}{Introduced macro}
 % \changes{v1.65}{2019/10/13}{Deleted cs{@addpunct}}
+% \changes{v1.77}{2021/04/16}{New separator of institutions}
 % Typesetting authors' addresses in the footnote style
 %    \begin{macrocode}
 \def\@mkauthorsaddresses{%
