--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -1,4 +1,19 @@
 %<*manuscript|acmsmall|acmsmall-submission|acmlarge|acmtog|sigconf|authordraft|sigplan|sigchi|sigchi-a|acmsmall-conf>
+%%
+%% 
+%% Commands for TeXCount
+%<<TCMACROS
+%TC:macro \cite [option:text,text]
+%TC:macro \citep [option:text,text]
+%TC:macro \citet [option:text,text]
+%TC:envir table 0 1
+%TC:envir table* 0 1
+%TC:envir tabular [ignore] word
+%TC:envir displaymath 0 word
+%TC:envir math 0 word
+%TC:envir comment 0 0
+%TCMACROS
+%% 
 %% 
 %% The first command in your LaTeX source must be the \documentclass command.
 %<manuscript>\documentclass[manuscript,screen,review]{acmart}
