--- a/README
+++ b/README
@@ -295,3 +295,4 @@ Version 1.78.  Documentation update.
 
 Version 1.79.  Fixed pages with index
 	       (https://github.com/borisveytsman/acmart/issues/440)
+	       Updated information for TAP, TCPS, TEAC
