--- a/README
+++ b/README
@@ -296,3 +296,5 @@ Version 1.78.  Documentation update.
 Version 1.79.  Fixed pages with index
 	       (https://github.com/borisveytsman/acmart/issues/440)
 	       Updated information for TAP, TCPS, TEAC
+
+Version 1.80.  New journals: DLT, FAC
