Cleared documentation issue

--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -384,9 +384,10 @@ command has a ``short title'' parameter:
 \section{Authors and Affiliations}
 
 Each author must be defined separately for accurate metadata
-identification. Multiple authors may share one affiliation. Authors'
-names should not be abbreviated; use full first names wherever
-possible. Include authors' e-mail addresses whenever possible.
+identification.  As an exception, multiple authors may share one
+affiliation. Authors' names should not be abbreviated; use full first
+names wherever possible. Include authors' e-mail addresses whenever
+possible.
 
 Grouping authors' names or e-mail addresses, or providing an ``e-mail
 alias,'' as shown below, is not acceptable:
