--- a/README
+++ b/README
@@ -12,6 +12,9 @@ The production version is the one on CTAN and ACM sites.
 
 Changes
 
+Version 1.82   Bug fixes.
+	       New command \anon for anonymization of short strings.
+
 Version 1.81   Bug fixes
 	       New bib field distinctURL to print URL even if doi is present.
 	       Reworded samples
