--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1296,8 +1296,8 @@
 % them.
 %
 % Sometimes authors want to define new theorem-like constructs that
-% use |theorem| counters.  They must be defined either after
-% |\begin{document}|, or delayed using \cs{AtEndPreamble} construct,
+% use |theorem| counters.  These constructs must be defined either after
+% |\begin{document}|, or delayed using \cs{AtEndPreamble} macro,
 %   for example,
 % \begin{verbatim}
 % \AtEndPreamble{%
